<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/title_tv"
       style="@style/BoardingTextViewsWelcome"
        android:text="@string/welcome_to_productive_life"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/description_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description_tv"
        style="@style/BoardingTextViewsWelcome"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lottie_anim"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/collaboration_with_students"
        app:layout_constraintTop_toBottomOf="@id/title_tv" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_anim"
        style="@style/Animation"
        android:src="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@id/skip_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/description_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip_btn"
        style="@style/BoardingTextViews"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="15dp"
        android:text="@string/skip"
        android:layout_marginVertical="20dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/hint_tv"
        android:elevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/lottie_anim"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="textEnd" />

    <TextView
        android:id="@+id/hint_tv"
        android:layout_margin="20dp"
        style="@style/BoardingTextViews"
        android:text="@string/you_have_an_account_already"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/sign_in_btn"
        style="@style/BoardingTextViews"
        android:text="@string/sign_in"
        android:layout_marginVertical="22dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>